<resources>
    <string name="app_name">UtilityApp</string>
    <string name="equals">=</string>
    <string name="convert">Convert</string>
    <string name="_1">1</string>
    <string name="blank" />
    <string name="travel_companion">Travel Companion</string>
    <string name="todo">TODO</string>
    <string name="it_is_20_celsius">It is 20 celsius</string>
    <string name="set">Set.</string>
    <string name="local_currency">Local Currency</string>
    <string name="save_settings">Save Settings</string>
    <string name="confirm">Confirm</string>
    <string name="aud">$ AUD</string>
    <string name="convert_to_local_currency">Convert To Local Currency</string>
    <string name="convert_to_home_currency">Convert To Home Currency</string>
    <string name="zero">0</string>
</resources>
