<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/appTitle"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_companion" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="settingsClicked"
                android:text="@string/set" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/weatherPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/weatherDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_is_20_celsius" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="6"
                android:text="@string/aud"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:importantForAutofill="no"
                android:text="@string/local_currency"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/homeCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="5"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/_1"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals" />

            <EditText
                android:id="@+id/localCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/zero"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/localConversionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48sp"
                android:layout_marginEnd="48sp"
                android:onClick="convertClicked"
                android:text="@string/convert_to_local_currency" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/homeConversionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48sp"
                android:layout_marginEnd="48sp"
                android:onClick="convertClicked"
                android:text="@string/convert_to_home_currency" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                android:onClick="check"/>
        </TableRow>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>